--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
           I design and code beautifully simple things, and I love what I do.
         </p>
         <div class="social-media">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#" class=""><i class="bx bxl-github"></i></a>
+          <a href="https://www.facebook.com/Andrei0Chetan"
+            ><i class="bx bxl-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/chetan.andrei/"
+            ><i class="bx bxl-instagram-alt"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/andrei-chetan-108b8b197/"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://github.com/AndreiChetan" class=""
+            ><i class="bx bxl-github"></i
+          ></a>
         </div>
       </div>
       <div class="home-img">
