--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
           I design and code beautifully simple things, and I love what I do.
         </p>
         <div class="social-media">
-          <a href="https://www.facebook.com/Andrei0Chetan"
+          <a href="https://www.facebook.com/Andrei0Chetan" target="_blank"
             ><i class="bx bxl-facebook"></i
           ></a>
-          <a href="https://www.instagram.com/chetan.andrei/"
+          <a href="https://www.instagram.com/chetan.andrei/" target="_blank"
             ><i class="bx bxl-instagram-alt"></i
           ></a>
-          <a href="https://www.linkedin.com/in/andrei-chetan-108b8b197/"
+          <a
+            href="https://www.linkedin.com/in/andrei-chetan-108b8b197/"
+            target="_blank"
             ><i class="bx bxl-linkedin"></i
           ></a>
-          <a href="https://github.com/AndreiChetan" class=""
+          <a href="https://github.com/AndreiChetan" target="_blank"
             ><i class="bx bxl-github"></i
           ></a>
         </div>
