--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Protofolio</a>
+      <a href="#" class="logo">Portofolio</a>
       <i class="bx bx-menu" id="menu-icon"></i>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
@@ -167,41 +167,11 @@
               website that is both visually appealing and optimized for
               performance. Whether you need a simple informational website or a
               complex e-commerce platform, we have the expertise to handle
-              projects of all sizes.</span
-            >
+              projects of all sizes.
+            </span>
           </p>
 
           <button onclick="readMore2()" class="btn" id="readBtn2">
-            Read More
-          </button>
-        </div>
-
-        <div class="services-box">
-          <i class="bx bxs-paint"></i>
-          <h3>Graphic Design</h3>
-          <p>
-            At our graphic design service, we believe in the power of visual
-            storytelling. We offer a comprehensive range of creative solutions
-            to help your brand stand out and make a lasting impression. We are
-            passionate about transforming ideas into visually stunning designs
-            that resonate with your target audience<span id="dots3">...</span
-            ><span id="more3"
-              >. Whether you need a new logo, eye-catching marketing materials,
-              or a complete brand identity overhaul, we have the expertise and
-              artistic flair to bring your vision to life. We take the time to
-              understand your brand values, target market, and goals to create
-              designs that not only look great but also effectively communicate
-              your message. Our graphic design process is collaborative and
-              iterative. We work closely with you, ensuring that your feedback
-              and ideas are incorporated into the final design. From
-              conceptualization to execution, we pay attention to every detail,
-              using color, typography, and composition to create visually
-              impactful designs that capture the essence of your brand.
-              objectives</span
-            >
-          </p>
-
-          <button onclick="readMore3()" class="btn" id="readBtn3">
             Read More
           </button>
         </div>
@@ -302,7 +272,7 @@
 
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
-      <form action="#">
+      <form action="#" id="form">
         <div class="input-box">
           <input type="text" placeholder="Full Name" />
           <input type="email" placeholder="Email Address" />
@@ -331,7 +301,7 @@
           target="_blank"
           class="btn btn-email"
         >
-          Send Email
+          Send Me an Email
         </a>
       </form>
     </section>
